.metadata/.plugins/org.eclipse.cdt.ui/TestReview.build.log
14:47:34 **** Incremental Build of configuration Debug for project TestReview ****
make all 
Building file: ../src/BMI.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BMI.d" -MT"src/BMI.o" -o "src/BMI.o" "../src/BMI.cpp"
In file included from ../src/BMI.cpp:8:0:
../src/BMI.h:23:7: error: ‘D’ is not a template
  BMI (D <string>, D <int>, D <double>);
       ^
../src/BMI.h:23:19: error: ‘D’ is not a template
  BMI (D <string>, D <int>, D <double>);
                   ^
../src/BMI.h:23:28: error: ‘D’ is not a template
  BMI (D <string>, D <int>, D <double>);
                            ^
../src/BMI.h:68:1: error: invalid use of template-name ‘BMI’ without an argument list
 BMI::BMI(){
 ^
../src/BMI.h:77:1: error: invalid use of template-name ‘BMI’ without an argument list
 BMI::BMI(D <string> name, int height, double weight){
 ^
../src/BMI.h:86:1: error: invalid use of template-name ‘BMI’ without an argument list
 BMI::~BMI(){}; //destructor.
 ^
../src/BMI.h:88:8: error: ‘template<class D> class BMI’ used without template parameters
 string BMI::getName() const {
        ^
../src/BMI.h:88:23: error: non-member function ‘std::string getName()’ cannot have cv-qualifier
 string BMI::getName() const {
                       ^
../src/BMI.h: In function ‘std::string getName()’:
../src/BMI.h:89:9: error: ‘newName’ was not declared in this scope
  return newName;
         ^
../src/BMI.h: At global scope:
../src/BMI.h:92:6: error: ‘template<class D> class BMI’ used without template parameters
 int  BMI::getHeight() const {
      ^
../src/BMI.h:92:23: error: non-member function ‘int getHeight()’ cannot have cv-qualifier
 int  BMI::getHeight() const {
                       ^
../src/BMI.h: In function ‘int getHeight()’:
../src/BMI.h:93:9: error: ‘newHeight’ was not declared in this scope
  return newHeight;
         ^
../src/BMI.h: At global scope:
../src/BMI.h:96:8: error: ‘template<class D> class BMI’ used without template parameters
 double BMI::getWeight() const {
        ^
../src/BMI.h:96:25: error: non-member function ‘double getWeight()’ cannot have cv-qualifier
 double BMI::getWeight() const {
                         ^
../src/BMI.h: In function ‘double getWeight()’:
../src/BMI.h:97:9: error: ‘newWeight’ was not declared in this scope
  return newWeight;
         ^
../src/BMI.h: In function ‘std::string getName()’:
../src/BMI.h:90:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
../src/BMI.h: In function ‘int getHeight()’:
../src/BMI.h:94:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
../src/BMI.h: In function ‘double getWeight()’:
../src/BMI.h:98:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [src/BMI.o] Error 1

14:47:35 Build Finished (took 461ms)

